# projects

./: README.md
Baseball-Model/: Iterate and Tune Pitcher Strikeouts.ipynb  Pitcher Strikeout Daily Run.ipynb  batter_daily_flow.py  batter_daily_stats_update_2025.py  pitcher_daily_stats_update_2025.py  pitcher_odds_today.csv
Baseball-Model/SQL/: pitcher_so_running_totals.sql  stored_procedure_training_data.sql  table_create-batter-daily-stats.sql  table_create-odds_2024.sql  table_create-pitcher-daily-stats.sql  table_create-stg_full_game_schedule.sql
Baseball-Model/results/: game_lineup-mlb-2025-regular.json  seasonal_games-mlb-2025-regular.json
LLM-RAG-PDFs/: LLM-RAG-PDF-reader.ipynb  requirements.txt
LLM-Subreddit-Summarizer/: reddit_scraper.ipynb  requirements.txt  subreddit_summarizer.ipynb
LLM_Competition/: LLM_Tournament.ipynb  requirements.txt
Leetcode-Tutor/leetcode_agent/: README.md  crew.py  debug_crew.py  main.py  memory_manager.py  pyproject.toml  sandbox_runner.py  test.ipynb  test_gradio_function.py  test_openai.py  tools.py
Leetcode-Tutor/leetcode_agent/config/: agents.yaml  tasks.yaml
Leetcode-Tutor/leetcode_agent/src/leetcode_agent/: crew_example.py  main_example.py
Leetcode-Tutor/leetcode_agent/src/leetcode_agent/config/: agents_config.yaml  tasks_config.yaml
