[project]
name = "leetcode_agent"
version = "0.1.0"
description = "leetcode-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
leetcode_agent = "leetcode_agent.main:run"
run_crew = "leetcode_agent.main:run"
train = "leetcode_agent.main:train"
replay = "leetcode_agent.main:replay"
test = "leetcode_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
